objects/National_ID__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>National ID&apos;s</relationshipLabel>
        <relationshipName>National_ID_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_ISO_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>National ID&apos;s</relationshipLabel>
        <relationshipName>National_ID_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>National ID</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>National ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>National ID&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>